# sc-poker

./: .binpath  Cargo.toml
barnett-protocol-for-sc/: Cargo.toml
barnett-protocol-for-sc/examples/: parameter_selection.rs
barnett-protocol-for-sc/src/: error.rs  lib.rs
barnett-protocol-for-sc/src/discrete_log_cards/: masking.rs  mod.rs  reveal.rs
barnett-smart-card-protocol/: Cargo.toml
barnett-smart-card-protocol/src/: error.rs
barnett-smart-card-protocol/src/discrete_log_cards/: mod.rs
crypto-primitives/src/: lib.rs
proof-toolbox/proof-essentials/: Cargo.toml
proof-toolbox/proof-essentials/src/: error.rs  lib.rs
proof-toolbox/proof-essentials/src/homomorphic_encryption/: mod.rs
proof-toolbox/proof-essentials/src/homomorphic_encryption/el_gamal/: mod.rs
proof-toolbox/proof-essentials/src/homomorphic_encryption/el_gamal/arithmetic_definitions/: ciphertext.rs  plaintext.rs
proof-toolbox/proof-essentials/src/utils/: permutation.rs  rand.rs  vector_arithmetic.rs
proof-toolbox/proof-essentials/src/vector_commitment/: mod.rs
proof-toolbox/proof-essentials/src/vector_commitment/pedersen/: mod.rs
proof-toolbox/proof-essentials/src/vector_commitment/pedersen/arithmetic_definitions/: commitment.rs
proof-toolbox/proof-essentials/src/zkp/: transcript.rs
proof-toolbox/proof-essentials/src/zkp/arguments/: mod.rs
proof-toolbox/proof-essentials/src/zkp/arguments/hadamard_product/: mod.rs  proof.rs  prover.rs
proof-toolbox/proof-essentials/src/zkp/arguments/matrix_elements_product/: mod.rs  prover.rs
proof-toolbox/proof-essentials/src/zkp/arguments/multi_exponentiation/: mod.rs  proof.rs  prover.rs
proof-toolbox/proof-essentials/src/zkp/arguments/shuffle/: mod.rs  proof.rs  prover.rs
proof-toolbox/proof-essentials/src/zkp/arguments/single_value_product/: mod.rs  proof.rs  prover.rs
proof-toolbox/proof-essentials/src/zkp/arguments/zero_value_bilinear_map/: mod.rs  proof.rs  prover.rs
proof-toolbox/proof-essentials/src/zkp/proofs/chaum_pedersen_dl_equality/: proof.rs  prover.rs
proof-toolbox/proof-essentials/src/zkp/proofs/schnorr_identification/: proof.rs  prover.rs
proof-toolbox/starknet-curve/src/: lib.rs
proof-toolbox/starknet-curve/src/curves/: mod.rs
src/: lib.rs
tests/: node_test.rs  test.rs
