[package]
name = "sc-poker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.55", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07", features = ["debug"] }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-marlin = { version = "0.3.0", default-features = false}
ark-serialize = "0.3.0"
blake2 = { version = "0.9", default-features = false }
proof-essentials = {path = "./proof-toolbox/proof-essentials" }
starknet-curve = { path = "./proof-toolbox/starknet-curve" }
thiserror-no-std = "2.0.2"
barnett-smart-card-protocol-for-sc = {path = "./barnett-protocol-for-sc"}
ark-bn254 = { git = "https://github.com/arkworks-rs/curves.git" }
ark-bls12-377 = "0.3.0"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
barnett-smart-card-protocol = {path = "./barnett-smart-card-protocol"}
anyhow = "1.0.55"
rand = "0.8.4" 
gclient = { git = "https://github.com/gear-tech/gear.git" , rev = "78dfa07"}
tokio = "1"