[package]
name = "proof-essentials"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-crypto-primitives = { version = "0.3.0", default-features = false}
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-marlin = { version = "0.3.0", default-features = false}
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", default-features = false }
merlin = { version = "3.0.0", default-features = false}
thiserror-no-std = "2.0.2"
blake2 = { version = "0.9", default-features = false }
digest = { version = "0.9" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07", features = ["debug"] }



[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3.29"

[[bench]]
name = "shuffle"
harness = false
